--- a/app/client/main.html
+++ b/app/client/main.html
@@ -5,5 +5,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+<div id="root">
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+</div>
 </body>
